name:                dominion
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/tyehle/dominion#readme
license:             OtherLicense
license-file:        LICENSE
author:              Tobin Yehle
maintainer:          tobinyehle@gmail.com
copyright:           2010 Tobin Yehle
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dominion
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable dominion-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dominion
  default-language:    Haskell2010

test-suite dominion-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dominion
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tyehle/dominion
